--- a/2023/02/notebook.ipynb
+++ b/2023/02/notebook.ipynb
@@ -37,35 +37,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Game 1: 3 blue, 4 red; 1 red, 2 green, 6 blue; 2 green\n",
-      "\n",
-      "['3 blue', '4 red']\n",
-      "['1 red', '2 green', '6 blue']\n",
-      "['2 green']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3059"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import regex as re\n",
+    "import pandas as pd\n",
+    "\n",
+    "test_red = 12\n",
+    "test_blue = 14\n",
+    "test_green = 13\n",
     "\n",
     "res = 0\n",
     "p_line = re.compile(\"Game (?P<game_id>[0-9]+):(?P<draw>;?(?:,? [0-9]+ (?:blue|red|green)){1,3})+\")\n",
     "p_draw = re.compile(\";?(?:,? (?P<color>[0-9]+ (?:blue|red|green)))+\")\n",
-    "with open(\"simple_test.txt\", \"r\") as f:\n",
+    "records = []\n",
+    "with open(\"day2_input.txt\", \"r\") as f:\n",
     "    for line in f:\n",
     "        match_line = p_line.match(line)\n",
-    "        print(line)\n",
-    "        for draw in match_line.captures(\"draw\"):\n",
+    "        for draw_id, draw in enumerate(match_line.captures(\"draw\")):\n",
+    "            draw_record = {\n",
+    "                \"game_id\": int(match_line.group(\"game_id\")),\n",
+    "                \"draw_id\": draw_id,\n",
+    "                \"red\": 0,\n",
+    "                \"blue\": 0,\n",
+    "                \"green\": 0,\n",
+    "            }\n",
     "            match_draw = p_draw.match(draw)\n",
-    "            print(match_draw.captures(\"color\"))\n",
-    "        break"
+    "            for draw in match_draw.captures(\"color\"):\n",
+    "                number, color = draw.split(' ')\n",
+    "                draw_record[color] = int(number)\n",
+    "            records.append(draw_record)\n",
+    "games = pd.DataFrame.from_records(records).set_index([\"game_id\", \"draw_id\"])\n",
+    "\n",
+    "\n",
+    "sum(set(games.index.get_level_values(\"game_id\")) - set(games.query(\n",
+    "    \"red > @test_red \"\n",
+    "    \"or green > @test_green \"\n",
+    "    \"or blue > @test_blue\"\n",
+    ").index.get_level_values(\"game_id\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65371"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games.reset_index().groupby(\"game_id\")[[\"red\", \"green\", \"blue\"]].max().prod(axis=1).sum()"
    ]
   }
  ],
